--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
+  "author": "Graeme Bruce",
   "dependencies": {
    "cheerio": "^0.22.0",
    "express": "^4.15.2",
    "fast-csv": "^2.4.0",
    "request": "^2.81.0",
- },
-  "author": "Graeme Bruce"  
+ }
 }
