--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "cheerio": "^0.22.0",
    "express": "^4.15.2",
    "fast-csv": "^2.4.0",
-   "request": "^2.81.0"
+   "request": "^2.81.0",
+   "aws-sdk": "2.x"
  },
   "main": "scraping.js",
   "scripts": {
